<resources>
    <string name="app_name">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="account">User name:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user">New user?</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email:</string>

    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_information">User Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="update_password">Reset your password</string>
    <string name="update">Reset</string>
    <string name="new_password">New password：</string>
    <string name="verify_new_password">Verify new password：</string>
    <string name="delete_account">Delete</string>
    <string name="show">Show</string>
    <string name="hide">hide</string>
    <string name="remember">Remember</string>

</resources>