<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9CCC65"
    tools:context=".signup_Activity">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="345dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/email"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/signup_emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:backgroundTint="#C5E1A5"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_drawable"
                android:paddingStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/account"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/signup_accountEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:backgroundTint="#C5E1A5"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_drawable"
                android:paddingStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/password"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/signup_passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_drawable"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#C5E1A5"
                android:inputType="textPassword"
                android:paddingStart="15dp"/>
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:cornerRadius="100dp"
        android:backgroundTint="#ffffff"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#9CCC65"
        app:backgroundTint="#8bc34a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:paddingVertical="10dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        />



</androidx.constraintlayout.widget.ConstraintLayout>